# dag-entity-res

./: .gitignore  CONTRIBUTING.md  README.md  dotenv.example  pyproject.toml
.github/: CODEOWNERS
artifacts/: block_pair_sanity.sql  create_blocks_adaptive.sql  drop_things.sql  feature_shard.sql  missing_orpaned_in_pairs.sql  scratchpad.sql
eda/: comp_eda.ipynb
exp/: README.md  modelling.ipynb
models/: er_pair_clf.joblib
parked/: er_pair_scores.py.bak  sharded_scoring.py.bak
run_configs/: er_pair_scores.yaml  er_pair_scores_stream.yaml  logging_config.yaml
src/resolver/: __init__.py  definitions.py
src/resolver/defs/: ai_utils.py  hello.py  iomanagers.py  jobs.py  pipeline_with_review.py  resources.py  sensors.py  settings.py  sql_utils.py  utils.py
src/resolver/defs/assets/: blocking.py  companies.py  er_pair_scores_sharded.py  features.py  features.py.bak  features.py.stream.wip  features_nofanout.py.bak  llm_placeholder.py.ph  matching.py  pairing.py  pairing.py.bak  pairing.stream.py.wip  resolve_companies.py  sanity.py  scoring.py  sharded_features.py  sharded_pairing.py  sharded_pairing.py.bak
src/resolver/defs/prompts/: blocking_check.text.j2  blocking_pair_check.text.j2  final_canonicalization_review.text.j2  final_review.text.j2  scoring_check.text.j2
src/resolver/defs/sql/: blocking_overlap.sql.j2  blocking_pairs.sql.j2  blocking_pairs_shard.sql.j2  blocking_stats.sql.j2  (+8 more)
tests/: .env.test  conftest.py  render_sql.py  run_duck_query.py  system_state_check.py  test_clean_comp_asset.py  test_clean_company_sql.py  test_feature_scoring.py
